# wisconsin-shell

./: .gitignore  CMakeLists.txt  batchCommand.cpp  batchCommand.h  wish.cpp
